# cookiecutter-pysql-poetry

./: cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.repo_name}}/: .bumpversion.cfg  .pre-commit-config.yaml  pyproject.toml  tox.ini
{{cookiecutter.repo_name}}/.github/: pull_request_template.md
{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/: __init__.py  __main__.py  log.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/cli/: main_cli.py
{{cookiecutter.repo_name}}/tests/: test_{{cookiecutter.repo_name}}.py
